// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer render correctly 1`] = `
<div
  class="ant-drawer ant-drawer-right ant-drawer ant-drawer-open ant-drawer-inline"
  tabindex="-1"
>
  <div
    class="ant-drawer-mask"
  />
  <div
    aria-hidden="true"
    data-sentinel="start"
    style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
    tabindex="0"
  />
  <div
    class="ant-drawer-content-wrapper"
    style="width: 378px;"
  >
    <div
      aria-modal="true"
      class="ant-drawer-content"
      role="dialog"
    >
      <div
        class="ant-drawer-wrapper-body"
      >
        <div
          class="ant-drawer-header"
        >
          <div
            class="ant-drawer-header-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
              type="button"
            >
              <span
                aria-label="close"
                class="anticon anticon-close"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-drawer-title"
            >
              Title
            </div>
          </div>
        </div>
        <div
          class="ant-drawer-body"
        >
          <div
            class="ant-drawer-body-content"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    data-sentinel="end"
    style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
    tabindex="0"
  />
</div>
`;

exports[`Drawer render with confirmLoading and okButtonProps 1`] = `
<div
  class="ant-drawer ant-drawer-right ant-drawer ant-drawer-with-footer ant-drawer-open ant-drawer-inline"
  tabindex="-1"
>
  <div
    class="ant-drawer-mask"
  />
  <div
    aria-hidden="true"
    data-sentinel="start"
    style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
    tabindex="0"
  />
  <div
    class="ant-drawer-content-wrapper"
    style="width: 378px;"
  >
    <div
      aria-modal="true"
      class="ant-drawer-content"
      role="dialog"
    >
      <div
        class="ant-drawer-wrapper-body"
      >
        <div
          class="ant-drawer-header"
        >
          <div
            class="ant-drawer-header-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
              type="button"
            >
              <span
                aria-label="close"
                class="anticon anticon-close"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-drawer-title"
            >
              Title
            </div>
          </div>
        </div>
        <div
          class="ant-drawer-body"
        >
          <div
            class="ant-drawer-body-content"
          >
            Here is content of Drawer
          </div>
          <div
            class="ant-drawer-footer-content"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
            >
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-primary ant-btn-loading ant-btn-dangerous"
                  type="button"
                >
                  <span
                    class="ant-btn-icon ant-btn-loading-icon"
                  >
                    <span
                      aria-label="loading"
                      class="anticon anticon-loading anticon-spin"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="loading"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span>
                    OK
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default"
                  type="button"
                >
                  <span>
                    Cancel
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    data-sentinel="end"
    style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
    tabindex="0"
  />
</div>
`;

exports[`Drawer render with custom footer 1`] = `
<div
  class="ant-drawer ant-drawer-right ant-drawer ant-drawer-with-footer ant-drawer-open ant-drawer-inline"
  tabindex="-1"
>
  <div
    class="ant-drawer-mask"
  />
  <div
    aria-hidden="true"
    data-sentinel="start"
    style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
    tabindex="0"
  />
  <div
    class="ant-drawer-content-wrapper"
    style="width: 378px;"
  >
    <div
      aria-modal="true"
      class="ant-drawer-content"
      role="dialog"
    >
      <div
        class="ant-drawer-wrapper-body"
      >
        <div
          class="ant-drawer-header"
        >
          <div
            class="ant-drawer-header-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
              type="button"
            >
              <span
                aria-label="close"
                class="anticon anticon-close"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-drawer-title"
            >
              Title
            </div>
          </div>
        </div>
        <div
          class="ant-drawer-body"
        >
          <div
            class="ant-drawer-body-content"
          >
            Here is content of Drawer
          </div>
          <div
            class="ant-drawer-footer-content"
          >
            <div>
              custom footer
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    data-sentinel="end"
    style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
    tabindex="0"
  />
</div>
`;

exports[`Drawer render with default footer 1`] = `
<div
  class="ant-drawer ant-drawer-right ant-drawer ant-drawer-with-footer ant-drawer-open ant-drawer-inline"
  tabindex="-1"
>
  <div
    class="ant-drawer-mask"
  />
  <div
    aria-hidden="true"
    data-sentinel="start"
    style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
    tabindex="0"
  />
  <div
    class="ant-drawer-content-wrapper"
    style="width: 378px;"
  >
    <div
      aria-modal="true"
      class="ant-drawer-content"
      role="dialog"
    >
      <div
        class="ant-drawer-wrapper-body"
      >
        <div
          class="ant-drawer-header"
        >
          <div
            class="ant-drawer-header-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
              type="button"
            >
              <span
                aria-label="close"
                class="anticon anticon-close"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-drawer-title"
            >
              Title
            </div>
          </div>
        </div>
        <div
          class="ant-drawer-body"
        >
          <div
            class="ant-drawer-body-content"
          >
            Here is content of Drawer
          </div>
          <div
            class="ant-drawer-footer-content"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
            >
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-primary"
                  type="button"
                >
                  <span>
                    OK
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default"
                  type="button"
                >
                  <span>
                    Cancel
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    data-sentinel="end"
    style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
    tabindex="0"
  />
</div>
`;

exports[`Drawer render with okText and cancenText 1`] = `
<div
  class="ant-drawer ant-drawer-right ant-drawer ant-drawer-with-footer ant-drawer-open ant-drawer-inline"
  tabindex="-1"
>
  <div
    class="ant-drawer-mask"
  />
  <div
    aria-hidden="true"
    data-sentinel="start"
    style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
    tabindex="0"
  />
  <div
    class="ant-drawer-content-wrapper"
    style="width: 378px;"
  >
    <div
      aria-modal="true"
      class="ant-drawer-content"
      role="dialog"
    >
      <div
        class="ant-drawer-wrapper-body"
      >
        <div
          class="ant-drawer-header"
        >
          <div
            class="ant-drawer-header-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
              type="button"
            >
              <span
                aria-label="close"
                class="anticon anticon-close"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-drawer-title"
            >
              Title
            </div>
          </div>
        </div>
        <div
          class="ant-drawer-body"
        >
          <div
            class="ant-drawer-body-content"
          >
            Here is content of Drawer
          </div>
          <div
            class="ant-drawer-footer-content"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
            >
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-primary"
                  type="button"
                >
                  <span>
                    custom ok text
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default"
                  type="button"
                >
                  <span>
                    custom cancel text
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    data-sentinel="end"
    style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
    tabindex="0"
  />
</div>
`;

exports[`Drawer render with onOk 1`] = `
<div
  class="ant-drawer ant-drawer-right ant-drawer ant-drawer-with-footer ant-drawer-open ant-drawer-inline"
  tabindex="-1"
>
  <div
    class="ant-drawer-mask"
  />
  <div
    aria-hidden="true"
    data-sentinel="start"
    style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
    tabindex="0"
  />
  <div
    class="ant-drawer-content-wrapper"
    style="width: 378px;"
  >
    <div
      aria-modal="true"
      class="ant-drawer-content"
      role="dialog"
    >
      <div
        class="ant-drawer-wrapper-body"
      >
        <div
          class="ant-drawer-header"
        >
          <div
            class="ant-drawer-header-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
              type="button"
            >
              <span
                aria-label="close"
                class="anticon anticon-close"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-drawer-title"
            >
              Title
            </div>
          </div>
        </div>
        <div
          class="ant-drawer-body"
        >
          <div
            class="ant-drawer-body-content"
          >
            Here is content of Drawer
          </div>
          <div
            class="ant-drawer-footer-content"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
            >
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-primary"
                  type="button"
                >
                  <span>
                    OK
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default"
                  type="button"
                >
                  <span>
                    Cancel
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    data-sentinel="end"
    style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
    tabindex="0"
  />
</div>
`;
